--- a/src/settings/wearer-settings/wearers-configuration-page/carers-data/carers.scss
+++ b/src/settings/wearer-settings/wearers-configuration-page/carers-data/carers.scss
@@ -150,7 +150,7 @@
 }
 
 .carers-data-table td:nth-child(3) {
-	width: 225px;
+	//width: 225px;
 }
 .carers-data-table th:nth-child(3) {
 	width: 225px;
