added out-modal clicking

--- a/src/reminder/reminder.scss
+++ b/src/reminder/reminder.scss
@@ -8,7 +8,7 @@
   font-size: 13px;
   font-family: 'DINPro-Medium'
 }
-.return-to-wearers{
+.return-to-wearers > div{
 	display: flex;
 	align-items: center;
 	cursor: pointer;
