--- a/src/reminder/reminder.scss
+++ b/src/reminder/reminder.scss
@@ -1,8 +1,7 @@
 .reminders .navigation ul li:nth-child(2) {background-color: #a1a1a1;}
 .switch-wearers .add-group .dropdown{display: none;}
-.switch-wearers .add-group  {max-width: 440px;width: 440px;}
 .switch-wearers .add-group > div {margin-top: 0;}
-.switch-wearers > div {padding: 10px;}
+.switch-wearers > div {padding: 10px;display: flex; align-items: center;}
 
 .reminders .switch-date p, .reminders .user-name p, .reminders .change-week p{
   font-size: 13px;
@@ -36,6 +35,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-right: 10px;
   & img {
     height: 25px;
     width: 25px;
@@ -61,6 +61,9 @@
   text-align: left;
   cursor: pointer;
   z-index: 0;
+}
+.switch-wearers .combobox .dropbtn:hover .switch-wearers .combobox .dropdown-content {
+  display: none;
 }
 .dropbtn:after {
   z-index: 100;
@@ -104,13 +107,6 @@
 
 .dropdown-content li:hover {background-color: #f1f1f1}
 
-.combobox:hover .dropdown-content {
-  display: block;
-}
-.combobox:hover .dropbtn::after{
-  bottom: 3px;
-  transform: rotate(180deg);
-}
 .switch-wearers {display: flex; justify-content: space-between;}
 .switch-wearers > div:nth-of-type(2) {
   display: flex; 
@@ -118,7 +114,7 @@
   margin-right: 30px;
   width: 440px;
 }
-.switch-wearers > div:nth-of-type(4){
+.switch-wearers > div:nth-of-type(3){
 	display: flex;
 	align-items: center;
 }
@@ -460,12 +456,13 @@
   .reminders .group {
     padding: 3px 14px;
   }
+  .wearericon{width: 30px;}
   .switch-wearers {
     flex-direction: column;
     align-items: center;
     & .user-image{display: none;}
-    & > div:nth-of-type(2){justify-content: center;}
-    & > div:nth-of-type(4){
+    & > div:nth-of-type(2){justify-content: center; width: auto;}
+    & > div:nth-of-type(3){
       margin-right: 0;
       display: flex;
       justify-content: space-around;
@@ -526,7 +523,7 @@
     justify-content: center;
   }
   .switch-wearers {
-    & > div:nth-of-type(4){
+    & > div:nth-of-type(3){
       margin-right: 0;
       display: flex;
       justify-content: space-around;
@@ -559,7 +556,7 @@
   .modal-edit :first-child{padding-top: 0;}
   .setdate .rdt{left: 2px;}
   .modal-edit .start p, .modal-edit .end p{width: 90%;}
-  .switch-wearers > div:nth-of-type(4){
+  .switch-wearers > div:nth-of-type(3){
     margin-right: 0;
     flex-direction: column;
     justify-content: flex-start;
