--- a/src/reminder/reminder.scss
+++ b/src/reminder/reminder.scss
@@ -110,6 +110,7 @@
 .switch-wearers {display: flex; justify-content: space-between;}
 .switch-wearers > div:nth-of-type(2) {
   display: flex; 
+  padding: 28px;
   align-items: center; 
   margin-right: 30px;
   width: 440px;
