added notifications page(basic)

--- a/src/app.scss
+++ b/src/app.scss
@@ -12,6 +12,7 @@
 @import './settings/wearer-settings/wearers-configuration-page/carers-data/emptyCarer.scss';
 @import './settings/wearer-settings/wearers-configuration-page/carers-data/addCarer.scss';
 @import './components/groups/groups.scss';
+@import './notification/notificationsMain.scss';
 
 
 
